# redis-telegram

./: .env.example  Cargo.toml  README.md
src/: main.rs  pub.rs  schema.rs  sub.rs
